Fix topbar border and scrollbar in chrome

--- a/resources/js/assets/styles/tailwind/tailwind.css
+++ b/resources/js/assets/styles/tailwind/tailwind.css
@@ -184,7 +184,7 @@ hr {
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: #00000030;
+  background-color: #ffffff30;
 }
 
 @tailwind components;
